...
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="Hello"
            android:onClick="buttonTapped"
            android:id="@+id/hello" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="How are you?"
            android:onClick="buttonTapped"
            android:id="@+id/howareyou" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="Good Evening"
            android:onClick="buttonTapped"
            android:id="@+id/goodevening" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="Please"
            android:onClick="buttonTapped"
            android:id="@+id/please" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="My name is..."
            android:onClick="buttonTapped"
            android:id="@+id/mynameis" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="Do you &#10;speak English?"
            android:onClick="buttonTapped"
            android:id="@+id/doyouspeakenglish" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:text="Welcome"
            android:onClick="buttonTapped"
            android:id="@+id/welcome" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I live in..."
            android:onClick="buttonTapped"
            android:id="@+id/ilivein"
            app:layout_column="1"
            app:layout_row="3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill" />

...
